<?xml version="1.0" encoding="utf-8"?>
<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/gradient_1"
   android:alpha=".95"
   android:orientation="vertical"
   android:padding="10dp"
   tools:context=".activity.AddDietActivity">
   
   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_background"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/diet_type"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />
         
         <Spinner
            android:id="@+id/addDietTypeSP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textColor="@android:color/black"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_background"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Menu : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <EditText
            android:id="@+id/addDietMenuET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/menu"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_background"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Date : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <EditText
            android:id="@+id/addDietDateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/date"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_background"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Time : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <EditText
            android:id="@+id/addDietTimeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/time"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
         
         <CheckBox
            android:id="@+id/addDietReminderCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"
            android:text="@string/reminder"
            />
         
         <CheckBox
            android:id="@+id/addDietAlarmCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"
            android:text="@string/daily_alarm"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:orientation="horizontal"
         android:padding="5dp">
         
         <Button
            android:id="@+id/addDietSaveBTN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:onClick="OnclickSaveDiet"
            android:text="@string/save"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />
         
         <Button
            android:id="@+id/addDietNewBTN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:onClick="onClickDietNew"
            android:text="@string/neww"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />
      </LinearLayout>
   
   </LinearLayout>
</ScrollView>
