<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/gradient_1"
   android:alpha=".95"
   android:orientation="vertical"
   android:padding="10dp"
   tools:context=".activity.AddMedicineActivity">
   
   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_round"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="Select Doctor: "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <Spinner
            android:id="@+id/addMedicineDoctorSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">
         </Spinner>
      
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_round"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Name : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <EditText
            android:id="@+id/addMedicineNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/medicine_name"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_round"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Dose : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <EditText
            android:id="@+id/addMedicineDoseET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/medicine_dose"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_round"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Start Date : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <EditText
            android:id="@+id/addMedicineFromDateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/from_date"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_round"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="End Date : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <EditText
            android:id="@+id/addMedicineToDateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/to_date"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_round"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Remarks : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <EditText
            android:id="@+id/addMedicineRemarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/remarks"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_round"
         android:orientation="vertical"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Dose schedule"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
         
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            
            <CheckBox
               android:id="@+id/addMedicineMorningCB"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1.2"
               android:onClick="onBoxClicked"
               android:text="@string/medicine_period_m"
               android:textSize="12sp"
               />
            
            
            <CheckBox
               android:id="@+id/addMedicineAfternoonCB"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1.35"
               android:onClick="onBoxClicked"
               android:text="@string/medicine_period_a"
               android:textSize="12sp"
               />
            
            <CheckBox
               android:id="@+id/addMedicineEveningCB"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1.2"
               android:onClick="onBoxClicked"
               android:text="@string/medicine_period_e"
               android:textSize="12sp"
               />
            
            <CheckBox
               android:id="@+id/addMedicineNightCB"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:onClick="onBoxClicked"
               android:text="@string/medicine_period_n"
               android:textSize="12sp"
               />
         
         </LinearLayout>
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
         
         <CheckBox
            android:id="@+id/addMedicineDailyAlarmCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onBoxClicked"
            android:text="@string/daily_alarm"
            />
      </LinearLayout>
      
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:orientation="horizontal"
         android:padding="5dp">
         
         <Button
            android:id="@+id/addMedicineSaveBTN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:onClick="onClickMedicineSave"
            android:text="@string/save"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
         />
         
         <Button
            android:id="@+id/addMedicineNewBTN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:onClick="onClickMedicineNew"
            android:text="@string/neww"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
         
         />
      </LinearLayout>
   
   
   </LinearLayout>

</ScrollView>
